--- a/assets/index.html
+++ b/assets/index.html
@@ -6,6 +6,12 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <style>
+      html, body, #root{
+        height: 100%;
+        margin: 0px;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
